filled in navbar

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <title>Century 21 Real Estate</title>
   </head>
   <body>
+  <nav id="navbar">
     <img src="https://seeklogo.com/images/C/Century_21-logo-78521142FF-seeklogo.com.png" alt="">
-  <nav>
     <ul>
     <li><a href="#">Search</a></li>
     <li><a href="#">Feature Listnings</a></li>
@@ -34,7 +34,6 @@
         <div></div>
         <div></div>
         <div></div>
-
         </div>
       </div>
   </section>
