--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <li><a href="#">Contact</a></li>
     </ul>
   </nav>
-  <section>
+  <section class="main-header">
     <div class="search-grid">
         <div> <h1>Search Lake Tahoe</h1></<div>
         <div><h2>Search By Area</h2></div>
     </div>
   </section>
-  <section>
+  <section >
     <div class="info-grid">
       <div>
         <h2>Lake Tahoe Real Estate</h2>
