adding styles for a form

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         <div>
           <h1 class="title-head">Search Lake Tahoe</h1>
           <form class="search-form">
-
+          <label> Location</label>
+          <input type="text"placeholder="Enter city, zip, community, or subdivison">
+          <input type="text"value="submit">
+          <label>Min. Price</label>
+          <input type= "number">
+          <label>Max. Price</label>
             </form>
           </div>
         <div>
